--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <div id="fullscreen-hero" class="home-hero">
         <div class="hero-container">
           <div class="hero-content"><a href="#" class="home-logo"><img src="images/logomark.svg"></a>
-            <h1 class="cd-headline letters type"><span>Анохин Александр Юрьевич<br/> Frontent-разработчик</span><br><span class="cd-words-wrapper"><b class="is-visible">пользовательские интерфейсы.</b><b>адаптивные лендинги.</b><b>интернет магазины.</b><b>корпоративные сайты</b></span></h1>
+            <h1 class="cd-headline letters type"><span>Анохин Александр Юрьевич<br/> Full Stack-разработчик</span><br><span class="cd-words-wrapper"><b class="is-visible">пользовательские интерфейсы.</b><b>адаптивные лендинги.</b><b>интернет магазины.</b><b>корпоративные сайты</b></span></h1>
             <div class="page-scroll learn-more"><a href="#me">Узнать больше<br><i class="fa fa-chevron-down"></i></a></div>
           </div>
         </div>
@@ -41,7 +41,7 @@
           <div class="row">
             <div class="eight columns offset-by-two columns">
               <p class="intro slate">Мои преимущества</p>
-              <p class="statement gunmetal">Я использую новейшие и стабильные технологии в Frontend-разработке</p>
+              <p class="statement gunmetal">Я использую новейшие и стабильные технологии в Frontend &amp; Backend разработке</p>
             </div>
           </div>
           <div class="row">
@@ -53,14 +53,14 @@
             </div>
             <div class="one-third column">
               <div class="expertise-block"><i class="fa fa-magic yellow"></i>
-                <h4 class="title slate">JavaScript/jQuery</h4>
+                <h4 class="title slate">JavaScript &amp; PHP</h4>
                 <p class="summary">JavaScript позволяет сделать мой страничку более отзывчивой к поситетелям, красивые анимации и обработка действий поситителя без ущерба оптимизации</p>
               </div>
             </div>
             <div class="one-third column">
               <div class="expertise-block"><i class="fa fa-code yellow"></i>
-                <h4 class="title slate">Gulp</h4>
-                <p class="summary">Gulp позволяет эффективно и быстро собрать проект и оптимизировать код, что позволит сайту работать еще быстрее</p>
+                <h4 class="title slate">Gulp, Git, NPM</h4>
+                <p class="summary">Автоматическая сборка позволяет эффективно и быстро собрать проекта, оптимизировать код, что позволит сайту работать еще быстрее</p>
               </div>
             </div>
           </div>
