change base page

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <div id="fullscreen-hero" class="home-hero">
         <div class="hero-container">
           <div class="hero-content"><a href="#" class="home-logo"><img src="images/logomark.svg"></a>
-            <h1 class="cd-headline letters type"><span>Анохин Александр Юрьевич<br/> Full Stack-разработчик</span><br><span class="cd-words-wrapper"><b class="is-visible">пользовательские интерфейсы.</b><b>адаптивные лендинги.</b><b>интернет магазины.</b><b>корпоративные сайты</b></span></h1>
+            <h1 class="cd-headline letters type"><span>Анохин Александр Юрьевич<br/> Full Stack-разработчик</span><br><span class="cd-words-wrapper"><b class="is-visible">пользовательские интерфейсы</b><b>адаптивные лендинги</b><b>интернет магазины</b><b>корпоративные сайты</b></span></h1>
             <div class="page-scroll learn-more"><a href="#me">Узнать больше<br><i class="fa fa-chevron-down"></i></a></div>
           </div>
         </div>
