fix little mistaks

--- a/eng/index.html
+++ b/eng/index.html
@@ -30,7 +30,7 @@
     <div id="fullscreen-hero" class="home-hero">
       <div class="hero-container">
         <div class="hero-content"><a href="#" class="home-logo"><img src="images/logomark.svg"></a>
-          <h1 class="cd-headline letters type"><span>Анохин Александр Юрьевич<br/> Full Stack-devoloper</span><br><span class="cd-words-wrapper"><b class="is-visible">user interfaces</b><b>adaptive landings</b><b>online stores</b><b>corporate websites</b></span></h1>
+          <h1 class="cd-headline letters type"><span>Aleksandr Anokhin<br/> Full Stack-devoloper</span><br><span class="cd-words-wrapper"><b class="is-visible">user interfaces</b><b>adaptive landings</b><b>online stores</b><b>corporate websites</b></span></h1>
           <div class="page-scroll learn-more"><a href="#me">Read more<br><i class="fa fa-chevron-down"></i></a></div>
         </div>
       </div>
@@ -73,7 +73,7 @@
       <div class="container">
         <div class="row">
           <div class="eight columns offset-by-two columns">
-            <p class="intro slate">My works/p>
+            <p class="intro slate">My works</p>
               <p class="statement gunmetal">Some of my works that I performed</p>
             </div>
           </div>
