--- a/Leon/index.html
+++ b/Leon/index.html
@@ -245,7 +245,7 @@
 										на займ с указанием нужной суммы имеющегося<br/> обеспечения
 									</div>
 								</div>
-								<img src="img/how-it-work/how-it-work.jpg" class="how-it-work1 how-it-work-img" alt="">
+								<img src="img/how-it-work/how-it-work.png" class="how-it-work1 how-it-work-img" alt="">
 							</div>
 							<div class="sl-slide">
 								<div class="wrapper-text-how wrapper-text-how1">
@@ -268,7 +268,7 @@
 										Кредитор, готовый предоставить займ в фиатной валюте, находит и акцептует подходящие для него заявки
 									</div>
 								</div>
-								<img src="img/how-it-work/how-it-work2.jpg" class="how-it-work2 how-it-work-img" alt="">
+								<img src="img/how-it-work/how-it-work2.png" class="how-it-work2 how-it-work-img" alt="">
 							</div>
 							<div class="sl-slide">
 								<div class="wrapper-text-how wrapper-text-how1">
@@ -291,7 +291,7 @@
 										Заёмщик вносит в качестве обеспечения займа свои крипто-активы в систему CryptoLoan
 									</div>
 								</div>
-								<img src="img/how-it-work/how-it-work3.jpg" class="how-it-work3 how-it-work-img" alt="">
+								<img src="img/how-it-work/how-it-work3.png" class="how-it-work3 how-it-work-img" alt="">
 							</div>
 							<div class="sl-slide">
 								<div class="wrapper-text-how wrapper-text-how1">
@@ -314,7 +314,7 @@
 										Кредитор получает подтверждение о внесении обеспечения, и оно надежно хранится в системе CryptoLoan в течение всего срока займа.
 									</div>
 								</div>
-								<img src="img/how-it-work/how-it-work4.jpg" class="how-it-work4 how-it-work-img" alt="">
+								<img src="img/how-it-work/how-it-work4.png" class="how-it-work4 how-it-work-img" alt="">
 							</div>
 							<div class="sl-slide">
 								<div class="wrapper-text-how wrapper-text-how1">
@@ -337,7 +337,7 @@
 										Кредитор предоставляет требуемую сумму в любой удобной фиатной валюте заёмщику
 									</div>
 								</div>
-								<img src="img/how-it-work/how-it-work7.jpg" class="how-it-work5 how-it-work-img" alt="">
+								<img src="img/how-it-work/how-it-work7.png" class="how-it-work5 how-it-work-img" alt="">
 							</div>
 							<div class="sl-slide">
 								<div class="wrapper-text-how wrapper-text-how1">
@@ -360,7 +360,7 @@
 										Заёмщик возвращает займ с процентами кредитору
 									</div>
 								</div>
-								<img src="img/how-it-work/how-it-work5.jpg" class="how-it-work6 how-it-work-img" alt="">
+								<img src="img/how-it-work/how-it-work5.png" class="how-it-work6 how-it-work-img" alt="">
 							</div>
 							<div class="sl-slide">
 								<div class="wrapper-text-how wrapper-text-how1">
@@ -383,7 +383,7 @@
 										Система CryptoLoan размораживает обеспечение по займу и возвращает его заёмщику
 									</div>
 								</div>
-								<img src="img/how-it-work/how-it-work6.jpg" class="how-it-work7 how-it-work-img" alt="">
+								<img src="img/how-it-work/how-it-work6.png" class="how-it-work7 how-it-work-img" alt="">
 							</div>
 						</div>
 					</div>
@@ -436,13 +436,13 @@
 						</div>
 					</div>
 					<div class="col-xl-8">
-						<img src="img/how-it-work/how-it-work.jpg" class="how-it-work1 how-it-work-img" alt="">
-						<img src="img/how-it-work/how-it-work2.jpg" class="how-it-work2 how-it-work-img" alt="">
-						<img src="img/how-it-work/how-it-work3.jpg" class="how-it-work3 how-it-work-img" alt="">
-						<img src="img/how-it-work/how-it-work4.jpg" class="how-it-work4 how-it-work-img" alt="">
-						<img src="img/how-it-work/how-it-work7.jpg" class="how-it-work5 how-it-work-img" alt="">
-						<img src="img/how-it-work/how-it-work5.jpg" class="how-it-work6 how-it-work-img" alt="">
-						<img src="img/how-it-work/how-it-work6.jpg" class="how-it-work7 how-it-work-img" alt="">
+						<img src="img/how-it-work/how-it-work.png" class="how-it-work1 how-it-work-img" alt="">
+						<img src="img/how-it-work/how-it-work2.png" class="how-it-work2 how-it-work-img" alt="">
+						<img src="img/how-it-work/how-it-work3.png" class="how-it-work3 how-it-work-img" alt="">
+						<img src="img/how-it-work/how-it-work4.png" class="how-it-work4 how-it-work-img" alt="">
+						<img src="img/how-it-work/how-it-work7.png" class="how-it-work5 how-it-work-img" alt="">
+						<img src="img/how-it-work/how-it-work5.png" class="how-it-work6 how-it-work-img" alt="">
+						<img src="img/how-it-work/how-it-work6.png" class="how-it-work7 how-it-work-img" alt="">
 					</div>
 				</div>
 				<div class="change-point wrapper-screen__change-point clearfix">
@@ -521,8 +521,8 @@
 						</div>
 					</div>
 					<div class="col-xl-8">
-						<img src="img/problem-solution.jpg" class='problem-solution1 problem-solution' alt="">
-						<img src="img/problem-solution2.jpg" class='problem-solution2 problem-solution' alt="">
+						<img src="img/problem-solution.png" class='problem-solution1 problem-solution' alt="">
+						<img src="img/problem-solution2.png" class='problem-solution2 problem-solution' alt="">
 						<div class="two-button clearfix">
 							<button class="traditional-system button-solutions">Традиционная система</button>
 							<button class="CyptoLoan button-solutions">Система CryptoLoan</button>
@@ -736,7 +736,7 @@
 					<div class="row">
 						<div class="col-xl-16">
 							<div class="wrapper-screen__title-defult">Токен</div>
-							<img src="img/token.jpg" class="img-token" alt="">
+							<img src="img/token.png" class="img-token" alt="">
 							<img src="img/mobile-token.png" class="img-mobile-token" alt="">
 						</div>
 					</div>
