--- a/Leon/index.html
+++ b/Leon/index.html
@@ -755,11 +755,11 @@
 										<div class="shadow-block__get-name-smm">
 											<a target="blank" href="https://golos.io/blockchain/@ituber/kak-poluchit-fiatnyi-zaim-pod-zalog-kriptovalyuty-kommentarii-eksperta-evgeniya-kaminskogo">Golos.io</a>
 										</div>
-										<div class="shdow-block__short-title">Краткий загаловок материала</div>
-										<div class="shadow-block__text-materials">Как получить фиатный займ под залог криптовалюты
+										<div class="shdow-block__short-title">Как получить фиатный займ под залог криптовалюты</div>
+										<div class="shadow-block__text-materials">
 											Комментарий эксперта Евгения Каминского
 										</div>
-										<a href="#" class="shadow-block__read-more">
+										<a target="blank" href="https://golos.io/blockchain/@ituber/kak-poluchit-fiatnyi-zaim-pod-zalog-kriptovalyuty-kommentarii-eksperta-evgeniya-kaminskogo" class="shadow-block__read-more">
 											читать материал &gt;
 										</a>
 									</div>
@@ -769,67 +769,11 @@
 										<div class="shadow-block__get-name-smm">
 											<a href="http://radio.mediametrics.ru/servis_dlya_ludey/58179/" target='blank'>mediametrics</a>
 										</div>
-										<div class="shdow-block__short-title">Краткий загаловок материала</div>
-										<div class="shadow-block__text-materials">Кредитование в эпоху криптовалют
+										<div class="shdow-block__short-title">Кредитование в эпоху криптовалют</div>
+										<div class="shadow-block__text-materials">
 											Инструменты и возможности внебанковской системы
 										</div>
-										<a href="#" class="shadow-block__read-more">
-											читать материал &gt;
-										</a>
-									</div>
-								</div>
-								<div class="sl-slide">
-									<div class="shadow-block">
-										<div class="shadow-block__get-name-smm">
-											"Название СМИ"
-										</div>
-										<div class="shdow-block__short-title">Краткий загаловок материала</div>
-										<div class="shadow-block__text-materials">Не очень длинный текст, кратко рассказывающий 
-											о чем написало это СМИ
-										</div>
-										<a href="#" class="shadow-block__read-more">
-											читать материал &gt;
-										</a>
-									</div>
-								</div>
-								<div class="sl-slide">
-									<div class="shadow-block">
-										<div class="shadow-block__get-name-smm">
-											"Название СМИ"
-										</div>
-										<div class="shdow-block__short-title">Краткий загаловок материала</div>
-										<div class="shadow-block__text-materials">Не очень длинный текст, кратко рассказывающий 
-											о чем написало это СМИ
-										</div>
-										<a href="#" class="shadow-block__read-more">
-											читать материал &gt;
-										</a>
-									</div>
-								</div>
-								<div class="sl-slide">
-									<div class="shadow-block">
-										<div class="shadow-block__get-name-smm">
-											"Название СМИ"
-										</div>
-										<div class="shdow-block__short-title">Краткий загаловок материала</div>
-										<div class="shadow-block__text-materials">Не очень длинный текст, кратко рассказывающий 
-											о чем написало это СМИ
-										</div>
-										<a href="#" class="shadow-block__read-more">
-											читать материал &gt;
-										</a>
-									</div>
-								</div>
-								<div class="sl-slide">
-									<div class="shadow-block">
-										<div class="shadow-block__get-name-smm">
-											"Название СМИ"
-										</div>
-										<div class="shdow-block__short-title">Краткий загаловок материала</div>
-										<div class="shadow-block__text-materials">Не очень длинный текст, кратко рассказывающий 
-											о чем написало это СМИ
-										</div>
-										<a href="#" class="shadow-block__read-more">
+										<a target="blank" href="http://radio.mediametrics.ru/servis_dlya_ludey/58179/" class="shadow-block__read-more">
 											читать материал &gt;
 										</a>
 									</div>
@@ -852,8 +796,8 @@
 										<div class="grafic-block__text">Q1 ’18<span class="grafic-block__line"></span></div>
 										<div class="grafic-title-block">Анализ рынка и маркетинговое исследование</div>
 										<ul>
-											<li>Маркетинговые и UX-исследования</li>
-											<li>Проектирование платформы</li>
+											<li><div class='line-before-li'></div>Маркетинговые и UX-исследования</li>
+											<li><div class='line-before-li'></div>Проектирование платформы</li>
 										</ul>
 									</div>
 								</div>
@@ -862,21 +806,21 @@
 										<div class="grafic-block__text">Q2 ’18<span class="grafic-block__line grafic-block__line_width"></span></div>
 										<div class="grafic-title-block">Разработка MVP</div>
 										<ul>
-											<li>Разработка прототипа веб-приложения</li>
-											<li>Тестирование функционального прототипа</li>
-											<li>Security Аудит и нагрузочное тестирование</li>
+											<li><div class='line-before-li'></div>Разработка прототипа веб-приложения</li>
+											<li><div class='line-before-li'></div>Тестирование функционального прототипа</li>
+											<li><div class='line-before-li'></div>Security Аудит и нагрузочное тестирование</li>
 										</ul>
 									</div>
 								</div>
 								<div class="sl-slide sl-slide-padding-1">
-									<div class="grafic-block">
-										<div class="grafic-block__text grafic-block__text_active">Q3 ’18<span class="grafic-block__line_active grafic-block__line"></span></div>
+									<div class="grafic-block grafic-block-active">
+										<div class="grafic-block__text">Q3 ’18<span class="grafic-block__line"></span></div>
 										<div class="grafic-title-block">Закрытый beta-тест</div>
 										<ul>
-											<li>Запуск поддержки пользователей</li>
-											<li>Закрытый beta-релиз web app</li>
-											<li>Подключение ТОП 5 криптовалют</li>
-											<li>Legal Россия и СНГ</li>
+											<li><div class='line-before-li'></div>Запуск поддержки пользователей</li>
+											<li><div class='line-before-li'></div>Закрытый beta-релиз web app</li>
+											<li><div class='line-before-li'></div>Подключение ТОП 5 криптовалют</li>
+											<li><div class='line-before-li'></div>Legal Россия и СНГ</li>
 										</ul>
 									</div>
 								</div>
@@ -885,11 +829,11 @@
 										<div class="grafic-block__text">Q4 ’18<span class="grafic-block__line"></span></div>
 										<div class="grafic-title-block">Security Test</div>
 										<ul>
-											<li>Развитие сообщества</li>
-											<li>Запуск public beta web app</li>
-											<li>Запуск внутреннего рейтинга участников системы</li>
-											<li>Партнерства с инвестиционными фондами и приложениями</li>
-											<li>Партнерства с инвестиционными фондами и приложениями</li>
+											<li><div class='line-before-li'></div>Развитие сообщества</li>
+											<li><div class='line-before-li'></div>Запуск public beta web app</li>
+											<li><div class='line-before-li'></div>Запуск внутреннего рейтинга участников системы</li>
+											<li><div class='line-before-li'></div>Партнерства с инвестиционными фондами и приложениями</li>
+											<li><div class='line-before-li'></div>Партнерства с инвестиционными фондами и приложениями</li>
 										</ul>
 									</div>
 								</div>
@@ -898,9 +842,9 @@
 										<div class="grafic-block__text">Q1 ’19<span class="grafic-block__line grafic-block__line_width"></span></div>
 										<div class="grafic-title-block">Legal</div>
 										<ul>
-											<li>International Legal</li>
-											<li>Запуск Bug Bounty кампании</li>
-											<li>Релиз developer API</li>
+											<li><div class='line-before-li'></div>International Legal</li>
+											<li><div class='line-before-li'></div>Запуск Bug Bounty кампании</li>
+											<li><div class='line-before-li'></div>Релиз developer API</li>
 										</ul>
 									</div>
 								</div>
@@ -909,10 +853,10 @@
 										<div class="grafic-block__text">Q2 ’19<span class="grafic-block__line grafic-block__line_width"></span></div>
 										<div class="grafic-title-block">Token Sale</div>
 										<ul>
-											<li>Мобильное приложение на Android</li>
-											<li>Активное развитие международного сообщества</li>
-											<li>Выпуск equity security токенов  компании</li>
-											<li>Закрытое ITO</li>
+											<li><div class='line-before-li'></div>Мобильное приложение на Android</li>
+											<li><div class='line-before-li'></div>Активное развитие международного сообщества</li>
+											<li><div class='line-before-li'></div>Выпуск equity security токенов  компании</li>
+											<li><div class='line-before-li'></div>Закрытое ITO</li>
 										</ul>
 									</div>
 								</div>
@@ -921,9 +865,9 @@
 										<div class="grafic-block__text">Q3 ’19<span class="grafic-block__line grafic-block__line_width"></span></div>
 										<div class="grafic-title-block">Запуск проекта</div>
 										<ul>
-											<li>Поддержка security токенов с выплатой дивидендов</li>
-											<li>Запуск премиум услуг (VIP-объявления, автообновление)</li>
-											<li>Оформление партнерств с международными маркет-мейкерами</li>
+											<li><div class='line-before-li'></div>Поддержка security токенов с выплатой дивидендов</li>
+											<li><div class='line-before-li'></div>Запуск премиум услуг (VIP-объявления, автообновление)</li>
+											<li><div class='line-before-li'></div>Оформление партнерств с международными маркет-мейкерами</li>
 										</ul>
 									</div>
 								</div>
@@ -932,10 +876,10 @@
 										<div class="grafic-block__text">Q4 ’19<span class="grafic-block__line"></span></div>
 										<div class="grafic-title-block">Международное развитие проекта</div>
 										<ul>
-											<li>Запуск мобильного приложения для iOS</li>
-											<li>Запуск  development program</li>
-											<li>Выход на новые рынки</li>
-											<li>International support center</li>
+											<li><div class='line-before-li'></div>Запуск мобильного приложения для iOS</li>
+											<li><div class='line-before-li'></div>Запуск  development program</li>
+											<li><div class='line-before-li'></div>Выход на новые рынки</li>
+											<li><div class='line-before-li'></div>International support center</li>
 										</ul>
 									</div>
 								</div>
@@ -954,7 +898,7 @@
 							<div class="sl sl-team">
 								<div class="sl-slide">
 									<div class="shadow-block shadow-block_height">
-										<img src="img/temmate1.png" alt="">
+										<div class="wrapper-img-in-shadow-1"></div>
 										<div class="shadow-block__temmate-name">Евгений Каминский</div>
 										<div class="shadow-block__speciality">CEO &amp; Основатель</div>
 										<div class="shadow-block__description-person">Эксперт по цифровой экономике и блокчейну</div>
@@ -964,7 +908,7 @@
 								</div>
 								<div class="sl-slide">
 									<div class="shadow-block shadow-block_height">
-										<img src="img/temmate1.png" alt="">
+										<div class="wrapper-img-in-shadow-2"></div>
 										<div class="shadow-block__temmate-name">Анна Есина</div>
 										<div class="shadow-block__speciality">Руководитель PR и маркетинга</div>
 										<div class="shadow-block__description-person">Опыт запуска более чем 5 ICO-проектов</div>
@@ -974,37 +918,10 @@
 								</div>
 								<div class="sl-slide">
 									<div class="shadow-block shadow-block_height">
-										<img src="img/temmate1.png" alt="">
+										<div class="wrapper-img-in-shadow-3"></div>
 										<div class="shadow-block__temmate-name">Роман Бовда</div>
 										<div class="shadow-block__speciality">CTO</div>
 										<div class="shadow-block__description-person">3 года руководства разработкой на блокчейне</div>
-										<a href="#" class="shadow-block__icon-fb"></a>
-										<a href="#" class="shadow-block__icon-l"></a>
-									</div>
-								</div>
-								<div class="sl-slide">
-									<div class="shadow-block shadow-block_height">
-										<img src="img/temmate1.png" alt="">
-										<div class="shadow-block__temmate-name">Александр Добронравов</div>
-										<div class="shadow-block__speciality">Дизайнер, Арт директор, менеджер проектов, дизайнер интерфейсов, UX/UI дизайнер</div>
-										<a href="#" class="shadow-block__icon-fb"></a>
-										<a href="#" class="shadow-block__icon-l"></a>
-									</div>
-								</div>
-								<div class="sl-slide">
-									<div class="shadow-block shadow-block_height">
-										<img src="img/temmate1.png" alt="">
-										<div class="shadow-block__temmate-name">Александр Добронравов</div>
-										<div class="shadow-block__speciality">Дизайнер, Арт директор, менеджер проектов, дизайнер интерфейсов, UX/UI дизайнер</div>
-										<a href="#" class="shadow-block__icon-fb"></a>
-										<a href="#" class="shadow-block__icon-l"></a>
-									</div>
-								</div>
-								<div class="sl-slide">
-									<div class="shadow-block shadow-block_height">
-										<img src="img/temmate1.png" alt="">
-										<div class="shadow-block__temmate-name">Александр Добронравов</div>
-										<div class="shadow-block__speciality">Дизайнер, Арт директор, менеджер проектов, дизайнер интерфейсов, UX/UI дизайнер</div>
 										<a href="#" class="shadow-block__icon-fb"></a>
 										<a href="#" class="shadow-block__icon-l"></a>
 									</div>
@@ -1113,7 +1030,6 @@
 								<div class="my-contacts">
 									<a href="https://t.me/cryptoloanio" target="blank" class="my-contacts__telegram"></a>
 									<a href="https://facebook.com/cryptoloan.io" target="blank" class="my-contacts__M"></a>
-									<a href="#" class="my-contacts__bit"></a>
 								</div>
 							</div>
 						</div>
