--- a/index.html
+++ b/index.html
@@ -95,14 +95,14 @@
             </div>
           </div>
           <div class="one-third column">
-            <div class="expertise-block"><a href="portfolio/spring-house/app/index.html" target="_blank" class="startup-brand"><img src="images/vremest.jpg"></a>
+            <div class="expertise-block"><a href="portfolio/spring-house/app/index.html" target="_blank" class="startup-brand"><img src="images/spring-house.jpg"></a>
             </div>
           </div>
         </div>
 
         <div class="row">
           <div class="one-third column">
-            <div class="expertise-block"><a href="portfolio/panda/home.html" target="_blank" class="startup-brand"><img src="images/designlab.jpg"></a>
+            <div class="expertise-block"><a href="portfolio/panda/home.html" target="_blank" class="startup-brand"><img src="images/build.jpg"></a>
             </div>
           </div>
           <div class="one-third column">
