--- a/index.html
+++ b/index.html
@@ -17,10 +17,11 @@
     <header></header>
     <!-- Start Hero Section-->
     <div id="fullscreen-hero" class="home-hero">
+    <div class="wallpaper-dark"></div>
       <div class="hero-container">
         <div class="hero-content"><a href="#" class="home-logo"><img src="images/logomark.svg"></a>
           <h1 class="cd-headline letters type"><span>Анохин Александр<br/>Web-разработчик</span><br><span class="cd-words-wrapper"><b class="is-visible">пользовательские интерфейсы</b><b>адаптивные лендинги</b><b>интернет магазины</b><b>корпоративные сайты</b></span></h1>
-          <div class="page-scroll learn-more"><a href="#wip">Мои работы<br><i class="fa fa-chevron-down"></i></a></div>
+          <div class="page-scroll learn-more"><a href="#my_portfolio">Мои работы<br><i class="fa fa-chevron-down"></i></a></div>
         </div>
       </div>
     </div>
@@ -38,7 +39,7 @@
           <div class="one-third column">
             <div class="expertise-block"><i class="fa fa-code yellow"></i>
               <h4 class="title slate">Gulp, Git, NPM</h4>
-              <p class="summary">Автоматическая сборка позволяет эффективно и быстро собрать проекта, оптимизировать код, что позволит сайту работать еще быстрее</p>
+              <p class="summary">Автоматическая сборка позволяет эффективно и быстро собрать и оптимизировать проект, что позволит сайту работать еще быстрее</p>
             </div>
           </div>
           <div class="one-third column">
@@ -56,7 +57,6 @@
         </div>
       </div>
     </section>
-    <!-- Start Work Section-->
 
     <!-- Start WIP Section-->
     <section id="wip">
@@ -65,7 +65,7 @@
         <div class="row">
 
           <div class="eight columns offset-by-two columns">
-            <p class="intro slate">Мои работы</p>
+            <p class="intro slate" id="my_portfolio">Мои работы</p>
           </div>
 
         </div>
@@ -99,24 +99,6 @@
             </div>
           </div>
         </div>
-
-        <div class="row">
-          <div class="one-third column">
-            <div class="expertise-block"><a href="portfolio/panda/home.html" target="_blank" class="startup-brand"><img src="images/build.jpg"></a>
-            </div>
-          </div>
-          <div class="one-third column">
-            <div class="expertise-block"><a href="portfolio/build/index.html" target="_blank" class="startup-brand"><img src="images/build.jpg"></a> 
-            </div>
-          </div>
-          <div class="one-third column">
-            <div class="expertise-block"><a href="portfolio/scout.html" target="_blank" class="startup-brand"><img src="images/houston.jpg"></a>
-            </div>
-          </div>
-        </div>
-
-        
-
 
       </div>
     </section>
