Форма обратной связи

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
               </div>
           </div>
           <div class="row">
-          <form action="">
+          <form action="mail.php" method="post">
           <div class="six columns">
               <input class='input-name' placeholder="ВАШЕ ИМЯ*" type="text" required>
               <input class='input-email' placeholder="ВАШ EMAIL*" type="email" required>
