--- a/app/portfolio/app/eng/index.html
+++ b/app/portfolio/app/eng/index.html
@@ -1036,7 +1036,7 @@
 							</div>
 						</div>
 						<div class="politic-appears">
-							<img src="img/close-appear.png" class="close-appear" alt="">
+							<img src="../img/close-appear.png" class="close-appear" alt="">
 							<div class="appear-block__title">
 Privacy policy</div>
 							<div class="wrapper-appear-block__text wrapper-appear-block-politic">
