--- a/Beeline/app/index.html
+++ b/Beeline/app/index.html
@@ -14,7 +14,7 @@
 	<meta property="og:image" content="path/to/image.jpg">
 	<link rel="shortcut icon" href="img/favicon/favicon.ico" type="image/x-icon">
 	<link rel="apple-touch-icon" sizes="114x114" href="img/favicon/apple-touch-icon-114x114.png">
-
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 	<!-- Chrome, Firefox OS and Opera -->
 	<meta name="theme-color" content="#000">
 	<!-- Windows Phone -->
@@ -27,14 +27,85 @@
 </head>
 
 <body>
+</body>
 
-	<div class="container">
-		<div class="row">
-			<h1>oregin</h1>
+<footer class="footer">
+	<div class="footer-top">
+		<div class="container">
+			<div class="row footer-top-line">
+				<div class="col-xl-2 col-lg-2 col-md-2 col-sm-2">
+					<div class="footer-logo">
+						<img src="img/beeline-logo.png" class="footer-beeline-logo" alt="beeline-logo"><span class="footer-name-logo">Beeline</span><span class="logo-sign">™</span>
+					</div>
+				</div>
+				<div class="col-xl-2 col-lg-2 col-md-2 block-url-footer"><a href="#" class="url-footer url-footer-left">Пополнить</a></div>
+				<div class="col-xl-3 col-lg-3 col-md-3 block-url-footer"><a href="#" class="url-footer url-footer-left">Перейти на Beeline</a></div>
+				<div class="col-xl-2 col-lg-2 col-md-2 block-url-footer"><a href="#" class="url-footer url-footer-right">Выбор номера</a></div>
+				<div class="col-xl-2 col-lg-2 col-md-2 block-url-footer"><a href="#" class="url-footer url-footer-right">Beeline на картах</a></div>
+			</div>
+			<div class="row footer_middle-line">
+				<div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
+					<p class="name-middle-footer">ТОО "КаР-Тел". Государственная лицензия №ДС0000317 от 24.08.1998, бессрочная, выдана Министерством транспорта и коммуникаций <span class="name-middle-footer-none">Республики Казахстан</span></p>
+				</div>
+			</div>
+			<div class="row footer-bottom-line">
+				<div class="col-xl-2 col-lg-2 col-md-2 col-sm-2 footer-map">
+					<img src="img/icon-location.png" alt="location" class="icon-footer-location-map"><span class="footer-location-map">Офисы на карте</span>
+				</div>
+				<div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 list-footer-bottom-line">
+					<ul class="list-footer list-footer-one">
+						<li class="name-bottom-footer">Частным лицам</li>
+						<li><a href="#" class="url-footer">Мобильный</a></li>
+						<li><a href="#" class="url-footer">Интернет дома</a></li>
+						<li><a href="#" class="url-footer">Магазин</a></li>
+						<li><a href="#" class="url-footer">Помощь</a></li>
+						<li><a href="#" class="url-footer">BeeTV</a></li>
+						<li><a href="#" class="url-footer">Карта Beeline</a></li>
+					</ul>
+				</div>
+				<div class="col-xl-3 col-lg-3 col-md-3 col-sm-3">
+					<ul class="list-footer list-footer-two">
+						<li class="name-bottom-footer">Бизнесу</li>
+						<li><a href="#" class="url-footer">Продукты и решения</a></li>
+						<li><a href="#" class="url-footer">Помощь</a></li>
+					</ul>
+				</div>
+				<div class="col-xl-3 col-lg-3 col-md-3 col-sm-3">
+					<ul class="list-footer list-footer-three">
+						<li class="name-bottom-footer">О Компании</li>
+						<li><a href="#" class="url-footer">Пресс-релизы</a></li>
+						<li><a href="#" class="url-footer">Закупки</a></li>
+						<li><a href="#" class="url-footer">Новости</a></li>
+						<li><a href="#" class="url-footer">Карьер</a></li>
+					</ul>
+				</div>	
+			</div>	
 		</div>
 	</div>
-
-	<script src="js/scripts.min.js"></script>
-
-</body>
+	<div class="footer-bottom">
+		<div class="container">
+			<div class="row">
+				<div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 footer__fotter-bottom-one">
+					<span>
+						<i class="fab fa-facebook-f icon-footer-bottom"></i>
+						<i class="fab fa-twitter icon-footer-bottom"></i>
+						<i class="fab fa-vk icon-footer-bottom icon-footer-vk"></i>
+						<i class="fab fa-youtube icon-footer-bottom icon-footer-youtube"></i>
+						<i class="fab fa-odnoklassniki icon-footer-bottom icon-footer-ok"></i>
+						<i class="fab fa-instagram icon-footer-bottom icon-footer-instagram"></i>
+						<i class="fab fa-telegram-plane icon-footer-bottom icon-footer-telegram"></i>
+						<i class="fab fa-facebook-messenger icon-footer-bottom icon-footer-messenger"></i>
+						<i class="fab fa-skype icon-footer-bottom icon-footer-skype"></i>
+					</span>
+				</div>
+				<div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 footer_icon-download">
+					<img src="img/app-store.png" alt="" class="footer_icon-download-logo">
+					<img src="img/google-play.png" alt="" class="footer_icon-download-logo">
+					<img src="img/windows-phone.png" alt="" class="footer_icon-download-logo">
+				</div>
+			</div>
+		</div>
+	</div>
+</footer>
+<script src="js/scripts.min.js"></script>
 </html>
