--- a/Beeline/app/index.html
+++ b/Beeline/app/index.html
@@ -23,17 +23,83 @@
 	<meta name="apple-mobile-web-app-status-bar-style" content="#000">
 
 	<link rel="stylesheet" href="css/main.min.css">
+	
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 
 </head>
 
 <body>
-
-	<div class="container">
-		<div class="row">
-			<h1>oregin</h1>
+	
+	<header class="header">
+		<div class="container">
+			<div class="row">
+				<div class="col-xl-12 col-xs-12 text-center">
+					<div class="header-information clearfix">
+						<div class="header-information__punction header-information__punction_size">
+							Частным лицам
+						</div>
+						<div class="header-information__punction">
+							Бизнесу
+						</div>
+						<div class="header-information__punction">
+							Сообщество
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</header>
+	<div class="line-menu">
+		<div class="container">
+			<div class="row">
+				<div class="col-xl-2 col-md-3 col-sm-4 col-6">
+					<div class="logo clearfix">
+						<div class="logo__circle-beeline"></div>
+						<div class="logo__text-beeline">Beeline</div>
+					</div>
+				</div>
+				<div class="col-xl-10 col-md-9 col-sm-8 col-6">
+					<ul class="line-menu__list-menu">
+						<li><a href="#">ПОМОЩЬ</a></li>
+						<li><a href="#">BEELINE ОФИСЫ</a></li>
+						<li><a href="#">КАРТА ПОКРЫТЫЯ</a></li>
+						<li><a href="#">ПОПОЛНИТЬ БАЛАНС</a></li>
+					</ul>
+				</div>
+			</div>
 		</div>
 	</div>
-
+	<div class="forum-line">
+		<div class="container">
+			<div class="row">
+				<div class="col-xl-12">
+					<div class="menu-animation clearfix">
+						<div class="menu-animation__text">
+							Меню / Мәзір
+						</div>
+						<div class="menu-animation__bottom-arrow"></div>
+					</div>
+					<div class="right-forum-text">
+						<div class="right-forum-text__create-theme clearfix">
+							<div class="right-forum-text__create-theme-icon">
+								<i class="fas fa-pencil-alt"></i>
+							</div>
+							<div class="right-forum-text__create-theme-text">
+								<a href="#">Создать тему</a>
+							</div>
+						</div>
+						<div class="right-forum-text__enter-forum">
+							<a href="#">войти на форум</a>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="hello-search text-center">
+		<div class="hello-search__dark-phone"></div>
+		<div class="hello-search__title-hello">Добро пожаловать на форум? Форумға қош келдіңіз?</div>
+	</div>
 	<script src="js/scripts.min.js"></script>
 
 </body>
